# oceanus-agent

./: .coderabbit.yaml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/commands/: README.md  analyze-issue.md  design.md  diagnose.md  review.md  test.md
.claude/hooks/: check_branch.py  guard_main.py
.claude/knowledge/: README.md  architecture.md  conventions.md  patterns.md  troubleshooting.md
.claude/memory/: decisions.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  labeler.yml  pr-auto-describe.yml  release.yml  semantic-release.yml  stale.yml  test-check.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml
docs/design/: database-design.md  github-ai-integration.md  system-design.md  workflow-design.md
docs/design/adr/: README.md  template.md
docs/guides/: ai-code-workflow.md  ai-integration.md  branch-protection.md  deployment.md  development.md  tdd.md  workflow-example.md
docs/templates/: design-template.md
scripts/: debug_tool.py  init_db.sql  init_github_labels.py  init_milvus.py
src/oceanus_agent/: __main__.py  agent.py
src/oceanus_agent/api/: app.py  routes.py
src/oceanus_agent/config/: prompts.py  settings.py
src/oceanus_agent/models/: diagnosis.py  knowledge.py  state.py
src/oceanus_agent/services/: llm_service.py  milvus_service.py  mysql_service.py
src/oceanus_agent/workflow/: graph.py
src/oceanus_agent/workflow/nodes/: accumulator.py  collector.py  diagnoser.py  retriever.py  storer.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: conftest.py  test_milvus_integration.py  test_mysql_integration.py  test_workflow_integration.py
tests/unit/services/: test_llm_service.py  test_milvus_service.py  test_mysql_service.py
tests/unit/workflow/: test_graph.py
tests/unit/workflow/nodes/: test_accumulator.py  test_collector.py  test_diagnoser.py  test_retriever.py  test_storer.py
